<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/normal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/infoLayouts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="@dimen/avatar_size_large"
                android:layout_height="@dimen/avatar_size_large"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_bio"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_blog"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_blog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_company"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_followers"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_following"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_public_repos"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_public_repos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_public_gists"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_public_gists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_created_at"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_created"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/user_updated_at"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_font"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_updated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/home_url_text_view_background"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>